# unified-memory-framework

./: CMakeLists.txt  README.md
.github/workflows/: basic.yml  coverity.yml  gpu.yml  nightly.yml  pr_push.yml  reusable_basic.yml  reusable_benchmarks.yml  reusable_dax.yml  reusable_fast.yml  reusable_gpu.yml  reusable_multi_numa.yml  reusable_proxy_lib.yml  reusable_sanitizers.yml  reusable_valgrind.yml  sanitizers.yml
benchmark/: CMakeLists.txt  benchmark.cpp  ubench.c
cmake/: FindCUDA.cmake  helpers.cmake
docs/: README.md
docs/config/: api.rst  spelling_exceptions.txt
examples/: CMakeLists.txt
examples/common/: utils_cuda.h
examples/cuda_shared_memory/: cuda_shared_memory.c
examples/ipc_level_zero/: ipc_level_zero.c
include/umf/: base.h  memory_provider.h  memory_provider_ops.h
include/umf/experimental/: memory_properties.h
include/umf/pools/: pool_disjoint.h
include/umf/providers/: provider_coarse.h
scripts/qemu/: run-build.sh
src/: CMakeLists.txt  libumf.def  libumf.map  memory_pool.c  memory_pool_tracking.c  memory_props.c  memory_props_internal.h  memory_provider.c  umf_hwloc.h
src/base_alloc/: CMakeLists.txt
src/coarse/: CMakeLists.txt
src/critnib/: critnib.c
src/pool/: CMakeLists.txt  pool_disjoint.c  pool_disjoint.cpp  pool_disjoint_internal.h
src/provider/: provider_coarse.c  provider_cuda.c  provider_level_zero.c  provider_os_memory.c  provider_tracking.c
src/proxy_lib/: CMakeLists.txt
test/: CMakeLists.txt  ipc_os_prov_proxy.c  memoryProviderAPI.cpp  poolFixtures.hpp  provider_os_memory.cpp  provider_os_memory_multiple_numa_nodes.cpp  test_installation.py
test/common/: provider.hpp  provider_null.c  provider_trace.c
test/pools/: disjoint_pool.cpp
test/props/: provider_props.cpp
test/providers/: cuda_helpers.cpp  provider_cuda.cpp  provider_level_zero.cpp
